objects/OF_CQS_Notifica_Preliminare__c.object
<CustomObject>
    <description>Questo oggetto serve ad immagazzinare esclusivamente delle pratiche del Responsabile Lavori nell&apos;ambito del Cruscotto Qualità e Sicurezza.</description>
    <fields>
        <fullName>OF_CQS_Altre_Imprese_Esecutrici__c</fullName>
        <inlineHelpText>Inserisci qui le altre Imprese Esecutrici</inlineHelpText>
        <label>Imprese Esecutrici</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Area_di_Riferimento_NotiPrel__c</fullName>
        <label>Area di Riferimento</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Comune__c</fullName>
        <defaultValue>&apos;PERUGIA&apos;</defaultValue>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Inserimento_Notifica_Prel__c</fullName>
        <label>Data Inserimento Notifica Preliminare</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Scadenza__c</fullName>
        <label>Data Scadenza</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Esecutrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Esecutrice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Impresa Esecutrice</value>
            </filterItems>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Impresa Mandataria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Notifiche Preliminari (Impresa Esecutrice)</relationshipLabel>
        <relationshipName>Notifiche_Preliminari_IE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Mandataria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Mandataria</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Impresa Esecutrice</value>
            </filterItems>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Consorzi Imprese Esecutrici</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Notifiche Preliminari</relationshipLabel>
        <relationshipName>Notifiche_Preliminari_IM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_N_B_NotPre__c</fullName>
        <defaultValue>&apos;Per procedere al caricamento degli allegati è necessario effettuare prima le operazioni di salvataggio.&apos;</defaultValue>
        <label>N.B.</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Numero_Protocollo_NotiPre__c</fullName>
        <label>Numero Protocollo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Notifica Preliminare</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NP-{00000}</displayFormat>
        <label>Notifica Preliminare N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifiche Preliminari</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>